--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Diego Córdova Ratti">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <!-- GoogleFonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +20,7 @@
     <!-- Estilos -->
     <link rel="stylesheet" href="assets/css/main.css">
     <!-- titulo -->
-    <title>Title</title>
+    <title>GIGEO App</title>
 </head>
 
 <body>
